// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items 1`] = `
Array [
  <div>
    <p>
      <span>
        T
      </span>
      his being Black History Month, last week
    </p>
    <div>
      <link
        href="//components.timesdev.tools/lib2/times-datawrapper-1.1.0/times-datawrapper.html"
        rel="import"
      />
      <times-datawrapper
        chart-id="csmgb"
      />
    </div>
    <div
      id="2"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "An image caption",
              "credits": "The image credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1500:1000",
              "uri": "https://image.io",
            }
          }
        />
      </div>
    </div>
    <div
      id="3"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "A secondary image caption",
              "credits": "The secondary image credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1500:1000",
              "uri": "https://image.io/secondary",
            }
          }
        />
      </div>
    </div>
    <div
      id="4"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "An inline image caption",
              "credits": "The inline image credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1500:1000",
              "uri": "https://image.io/inline",
            }
          }
        />
      </div>
    </div>
    <Link
      target="_blank"
      url="https://link.io"
    >
      Some Link
    </Link>
    <p>
      Some content
    </p>
    <div>
      <div>
        <PullQuote
          caption="AName"
          content="A pull quote"
          twitter="@AName"
        />
      </div>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="57838016001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="4084164751001"
                  id="4084164751001-57838016001-1"
                  poster="https://image.io"
                />
              </div>
            </div>
          </div>
        </div>
        <figcaption>
          <div>
            <Caption
              text="This is video caption"
            />
          </div>
        </figcaption>
      </figure>
    </div>
    <KeyFacts
      ast={
        Object {
          "attributes": Object {
            "title": "Example title",
          },
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Example bullet text",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "An example ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {
                        "href": "https://example.io",
                        "target": "_blank",
                        "type": "topic",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "link",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "link",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "More example text.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Example text ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "this is bold ",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "bold",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "this is in italics.",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "italic",
                    },
                  ],
                  "name": "listElement",
                },
              ],
              "name": "unorderedList",
            },
          ],
          "name": "keyFacts",
        }
      }
    />
  </div>,
  <div>
    <nav>
      <ArticleTopics
        topics={
          Array [
            Object {
              "name": "Topic",
              "slug": "topic",
            },
          ]
        }
      />
    </nav>
  </div>,
  <aside
    id="related-articles"
  >
    <RelatedArticles
      isVisible={false}
      slice={
        Object {
          "__typename": "StandardSlice",
          "items": Array [
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [],
                "hasVideo": false,
                "headline": "RA Headline",
                "id": "ra-1",
                "label": "RA Label",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://racrop169.io",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "https://racrop32.io",
                  },
                  "title": "RA Title",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T19:39:39.000Z",
                "shortHeadline": "Headline",
                "shortIdentifier": "2k629tpvh",
                "slug": "this-is-slug",
                "summary105": Array [],
                "summary125": Array [],
                "summary145": Array [],
                "summary160": Array [],
                "summary175": Array [],
                "summary225": Array [],
                "url": "https://ra.io",
              },
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>,
]
`;

exports[`2. article with header 1`] = `
Array [
  <div>
    <KeyFacts
      ast={
        Object {
          "attributes": Object {
            "title": "New Brexit referendum",
          },
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Another ministerial aide, ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {
                        "href": "https://www.thetimes.co.uk/edition/news/may-hit-by-another-brexit-walkout-amid-claims-of-establishment-coup-k9x69qlb8",
                        "target": "_blank",
                        "type": "article",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Robert Courts",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "link",
                    },
                    Object {
                      "attributes": Object {
                        "value": ", resigned saying that he could not look himself in the mirror if he backed the Chequers proposals.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Downing Street and Conservative Party bosses were seeking to assess the scale of a grassroots rebellion.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife \\"at least four times\\" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Chuka Umunna, leader of the ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Labour Remainers",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "italic",
                    },
                    Object {
                      "attributes": Object {
                        "value": ", dismissed Mrs May’s ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "compromise",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "bold",
                    },
                    Object {
                      "attributes": Object {
                        "value": " as “anti-worker and anti-business” and said that it would “royally screw” Britain’s service sector.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
              ],
              "name": "unorderedList",
            },
          ],
          "name": "keyFacts",
        }
      }
    />
    <p>
      Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
      <Link
        url="https://www.thetimes.co.uk/article/peers-call-for-action-after-liam-allan-trial-blunder-vnzn0sz89"
      >
        police disclosure of evidence
      </Link>
      <i>
         Telegraph 
      </i>
      last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
      <b>
        When Thatcher joined the campaign trail for the 2001 general election...
      </b>
    </p>
    <div>
      <figure>
        <div>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="5436121857001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="5831024132001"
                  id="5831024132001-5436121857001-2"
                  poster="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0c0309d4-1aeb-11e8-9010-1eef6ba5d3de.jpg?crop=1024%2C576%2C0%2C0"
                />
              </div>
            </div>
          </div>
        </div>
        <figcaption>
          <div>
            <Caption
              text="This is video caption"
            />
          </div>
        </figcaption>
      </figure>
    </div>
    <p>
      <b>
        Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
      </b>
    </p>
    <div>
      <figure>
        <div>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="5436121857001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="5831024132001"
                  id="5831024132001-5436121857001-3"
                  poster="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0c0309d4-1aeb-11e8-9010-1eef6ba5d3de.jpg?crop=1024%2C576%2C0%2C0"
                />
              </div>
            </div>
          </div>
        </div>
        <figcaption>
          <div>
            <Caption
              text="This is video caption secondary"
            />
          </div>
        </figcaption>
      </figure>
    </div>
    <div
      id="5"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1500:1000",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fb7ac990a-d872-11e7-9b16-edd3826708d6.jpg?crop=3959%2C2639%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <p>
      When Thatcher joined the campaign trail for the 2001 general election, she was followed closely by the media. After several minor strokes, however, it was announced in 2002 that she would cut back her heavy schedule. 
    </p>
    <div>
      <link
        href="//components.timesdev.tools/lib2/times-datawrapper-1.1.0/times-datawrapper.html"
        rel="import"
      />
      <times-datawrapper
        chart-id="csmgb"
      />
    </div>
    <p>
      Thatcher plainly admired the style and determination of Tony Blair, who crushed John Major’s Conservatives in the 1997 election, and he for his part seemed content from time to time to be compared with her as a strong leader. She regularly revisited some of the issues that had dominated her years in office; for example she gave strong support to the development of democracy and the protection of the rule of law in Hong Kong as promised in the treaty she had signed with China. In 1999, in her first conference speech since her resignation as leader, she defended General Augusto Pinochet, the former dictator of Chile, who was held in Britain after his arrest in 1998. 
    </p>
    <div
      id="9"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "3:2",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <p>
      By this time she was set to have a permanent place in the House of Commons, after the a rule change meant that an 8ft marble statue, for which she posed with her familiar handbag, could be placed there during her lifetime. When on display at Guildhall, however, it was decapitated by a man with a cricket bat, and so was withdrawn from public view. It was to be placed outside the House of Commons chamber, opposite Winston Churchill. 
    </p>
    <Ad
      contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
      section="news"
      slotName="inline-ad"
    />
    <p>
      She was driven by those beliefs to tackle the task of halting and reversing her country’s decline and to ensure that it played its full part in defending the freedoms of the democratic West. Her record and her personality will be the subject of continuing controversy. But no one will ever doubt her sincerity and her courage, and most will concede that the far-reaching changes she made would have been impossible without her. 
    </p>
    <div
      id="13"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1:1.50",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <p>
      Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister.
    </p>
    <div
      id="15"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "3:2",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <p>
      She led the Conservative Party for 15 years, won three general elections in succession, and never lost a significant vote in the House of Commons. Since Walpole in effect invented the role, only six men have served for longer than her as prime minister: Walpole himself, Pitt, Lord Liverpool, Lord Salisbury, Gladstone and Lord North. She fully earned her place in this company. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister.Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister
    </p>
    <div>
      <div>
        <PullQuote
          caption="JudgeSapnara"
          content="[The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child"
          twitter="@JudgeSapnara"
        />
      </div>
    </div>
    <p>
      Thatcher set out, first as party leader and then as prime minister, to overturn the consensus that had shaped postwar British politics and to replace it with a more competitive ethos of free enterprise. She wanted to rescue Britain from the debilitated state to which she believed it had been reduced by socialism and, in the words of her last bravura speech as Prime Minister to the House of Commons, to give back “control to people over their own lives and over their livelihood”. 
    </p>
    <p>
      It was time to depart, and she announced this to a meeting of the Cabinet on November 22. With typical courage she then went to the House of Commons to speak in a confidence debate. It was a rousing performance, a reminder of her gallantry, flair and conviction. She had not tired of her mission, but those whom she had led had tired of her. 
    </p>
    <p>
      Thatcher resigned as Prime Minister on November 28, leaving Downing Street, a little tearfully, though with the partial satisfaction of knowing that she was not to be succeeded by Heseltine but by her own favourite, Major, who had defeated Heseltine and Hurd in the parliamentary ballot to follow her. 
    </p>
    <p>
      Life out of office was initially miserable. Like her predecessor, Heath, she seemed disorientated by the loss of power. But with typical gumption she threw herself into establishing a foundation (named after her) to support business training projects in Eastern Europe and the former Soviet Union and the establishment of a chair of Enterprise Studies at 
      <Link
        target="_blank"
        url="https://www.cam.ac.uk/"
      >
        Cambridge University
      </Link>
      . She toured the world, speaking for large fees in the foundation’s name and to its great financial benefit. She remained immensely popular in several countries, particularly the US, Japan and Eastern Europe. She was the symbol of the defeat of communism and the triumph in the 1980s of market economics. 
    </p>
    <p>
      She returned sporadically, and not always helpfully, to the political fray. Her support for Major waned as he set out on a more pragmatic European policy than her own. She allowed her own more nationalist opinions to seep out into the public domain, and became ever more forceful, outspoken and extreme in her denunciations of the moves towards political and monetary union in Europe. 
    </p>
  </div>,
  <div>
    <nav>
      <ArticleTopics
        topics={
          Array [
            Object {
              "__typename": "Topic",
              "name": "Football",
              "slug": "football",
            },
            Object {
              "__typename": "Topic",
              "name": "Manchester United FC",
              "slug": "manchester-united",
            },
            Object {
              "__typename": "Topic",
              "name": "Chelsea FC",
              "slug": "chelsea",
            },
            Object {
              "__typename": "Topic",
              "name": "Arsenal",
              "slug": "arsenal",
            },
            Object {
              "__typename": "Topic",
              "name": "Rugby Union",
              "slug": "rugby-union",
            },
          ]
        }
      />
    </nav>
  </div>,
  <aside
    id="related-articles"
  >
    <RelatedArticles
      isVisible={false}
      slice={
        Object {
          "__typename": "StandardSlice",
          "items": Array [
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Patrick Kidd",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "TMS: Pratchett’s law of the jungle - Disable Saving",
                "id": "ea16d744-cb4a-11e4-a202-50ac5def393a",
                "label": "Health",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0547a7be-fb77-11e7-a987-7fcf5e9983dc.jpg?crop=2000%2C1125%2C0%2C104",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "//nu-cps-imgsrv-tnl-dev-webapp.elb.tnl-dev.ntch.co.uk/imageserver/image/9a9cf7c4b313584c4b1a231ffea56ad3154cc520.jpg?crop=780%2C520%2C0%2C0",
                  },
                  "id": "ea16d744-cb4a-11e4-a202-50ac5def393b",
                  "title": "TMS: Pratchett’s law of the jungle",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T19:39:39.000Z",
                "section": "",
                "shortHeadline": "Pratchett’s law of the jungle",
                "summary105": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school uniform to his job",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Terry Pratchett, who died last week, began his career on the ",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                      Object {
                        "attributes": Object {},
                        "children": Array [
                          Object {
                            "attributes": Object {
                              "value": "Bucks Free Press",
                            },
                            "children": Array [],
                            "name": "text",
                          },
                        ],
                        "name": "italic",
                      },
                      Object {
                        "attributes": Object {
                          "value": " in 1965, aged 17, and the paper recalls in a tribute that he wore his school uniform to his job interview. The editor, impressed, told him: “I like",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "http://cps-render-ci.elb.tnl-dev.ntch.co.uk/article/tms-pratchetts-law-of-the-jungle-xgqrcw779",
              },
            },
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Graeme Paton Transport Correspondent",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "Rise of centenarian drivers as elderly push on - V5 Premoderated Comments",
                "id": "b09fc422-cb53-11e4-81dd-064fe933cd41",
                "label": "Science",
                "leadAsset": Object {
                  "__typename": "Image",
                  "crop169": Object {
                    "__typename": "Crop",
                    "url": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F82723c10-fb7f-11e7-a987-7fcf5e9983dc.jpg?crop=4886%2C2748%2C92%2C108",
                  },
                  "crop32": Object {
                    "__typename": "Crop",
                    "url": "//nu-cps-imgsrv-tnl-dev-webapp.elb.tnl-dev.ntch.co.uk/imageserver/image/9bc3086dbe80a6be3b1974aac6df2d6e7a16af57.jpg?crop=780%2C520%2C0%2C0",
                  },
                  "id": "b09fc422-cb53-11e4-81dd-064fe933cd41",
                  "title": "Rise of centenarian drivers as elderly push on",
                },
                "publicationName": "TIMES",
                "publishedTime": "2015-03-23T20:42:27.000Z",
                "section": "",
                "shortHeadline": "Rise of centenarian drivers",
                "summary105": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the Driver and Vehicle",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "More than 200 motorists are still on the road after celebrating their 100th birthday as older people become increasingly reliant on the car.",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                  Object {
                    "attributes": Object {},
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Figures from the Driver and Vehicle Licensing Agency revealed that record numbers of",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "http://cps-render-ci.elb.tnl-dev.ntch.co.uk/article/rise-of-centenarian-drivers-as-elderly-push-on-6gb0bjnpz",
              },
            },
            Object {
              "article": Object {
                "__typename": "Article",
                "byline": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "John Simpson, Crime Correspondent | Will Humphries",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "inline",
                  },
                ],
                "headline": "YouTube ignored police pleas to remove threatening videos",
                "id": "cab431f6-39df-11e8-b5b4-b935584040f4",
                "label": "Youtube",
                "leadAsset": Object {
                  "__typename": "Video",
                  "posterImage": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "ratio": "16:9",
                      "url": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Ffa613a54-39c4-11e8-b5b4-b935584040f4.jpg?crop=939%2C528%2C0%2C0",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "ratio": "3:2",
                      "url": "https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2Ffa613a54-39c4-11e8-b5b4-b935584040f4.jpg?crop=792%2C528%2C73%2C0",
                    },
                    "id": "f5eacb2d-2f87-46cb-a36a-225bf9a6482f",
                    "title": "",
                  },
                },
                "publicationName": "TIMES",
                "publishedTime": "2018-04-06T23:01:00.000Z",
                "section": "news",
                "shortHeadline": "YouTube ignored police pleas",
                "summary105": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary125": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary145": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary160": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary175": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London. Within a week a",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "summary225": Array [
                  Object {
                    "children": Array [
                      Object {
                        "attributes": Object {
                          "value": "Light gleamed from the blade of what appeared to be a combat knife in a video of a huddled group of teenage boys in hoods and masks in Haringey, north London. Within a week a boy linked to a group known as G Lanes had been",
                        },
                        "children": Array [],
                        "name": "text",
                      },
                    ],
                    "name": "paragraph",
                  },
                ],
                "url": "https://www.thetimes.co.uk/article/youtube-ignored-police-pleas-to-remove-threatening-videos-62v2mqp23",
              },
            },
          ],
          "sliceName": "StandardSlice",
        }
      }
    />
  </aside>,
]
`;

exports[`3. an empty article 1`] = `
Array [
  <div>
    <KeyFacts
      ast={
        Object {
          "attributes": Object {
            "title": "New Brexit referendum",
          },
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Another ministerial aide, ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {
                        "href": "https://www.thetimes.co.uk/edition/news/may-hit-by-another-brexit-walkout-amid-claims-of-establishment-coup-k9x69qlb8",
                        "target": "_blank",
                        "type": "article",
                      },
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Robert Courts",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "link",
                    },
                    Object {
                      "attributes": Object {
                        "value": ", resigned saying that he could not look himself in the mirror if he backed the Chequers proposals.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Downing Street and Conservative Party bosses were seeking to assess the scale of a grassroots rebellion.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Dennis Mitchell’s high levels of testosterone in 1998 were caused by having sex with his wife \\"at least four times\\" on her birthday, according to the sprinter. USA Track and Field believed him, the IAAF did not",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
                Object {
                  "children": Array [
                    Object {
                      "attributes": Object {
                        "value": "Chuka Umunna, leader of the ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Labour Remainers",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "italic",
                    },
                    Object {
                      "attributes": Object {
                        "value": ", dismissed Mrs May’s ",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "compromise",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "bold",
                    },
                    Object {
                      "attributes": Object {
                        "value": " as “anti-worker and anti-business” and said that it would “royally screw” Britain’s service sector.",
                      },
                      "children": Array [],
                      "name": "text",
                    },
                  ],
                  "name": "listElement",
                },
              ],
              "name": "unorderedList",
            },
          ],
          "name": "keyFacts",
        }
      }
    />
    <div>
      <p>
        Mr Gove has previously said that memorising a poem is to “own a great work of art forever”. Andrew Motion, the former Poet Laureate, wrote in the 
        <Link
          url="https://www.thetimes.co.uk/article/peers-call-for-action-after-liam-allan-trial-blunder-vnzn0sz89"
        >
          police disclosure of evidence
        </Link>
        <i>
           Telegraph 
        </i>
        last year that rote learning has “a lot to be said against it”, but added: “As the phrase ‘learning by heart’ implies, this sort of remembering places the poem at a central place in ourselves and makes it precious.”
        <b>
          When Thatcher joined the campaign trail for the 2001 general election...
        </b>
      </p>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="5436121857001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="5831024132001"
                  id="5831024132001-5436121857001-4"
                  poster="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0c0309d4-1aeb-11e8-9010-1eef6ba5d3de.jpg?crop=1024%2C576%2C0%2C0"
                />
              </div>
            </div>
          </div>
        </div>
        <figcaption>
          <div>
            <Caption
              text="This is video caption"
            />
          </div>
        </figcaption>
      </figure>
    </div>
    <div>
      <p>
        <b>
          Baroness Thatcher, LG, OM, PC, FRS, Prime Minister, 1979-90, was born on October 13, 1925. She died on April 8, 2013, aged 87.
        </b>
      </p>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <div>
              <div>
                <video
                  controls={true}
                  data-account="5436121857001"
                  data-application-id={true}
                  data-embed="default"
                  data-player="default"
                  data-video-id="5831024132001"
                  id="5831024132001-5436121857001-5"
                  poster="https://www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F0c0309d4-1aeb-11e8-9010-1eef6ba5d3de.jpg?crop=1024%2C576%2C0%2C0"
                />
              </div>
            </div>
          </div>
        </div>
        <figcaption>
          <div>
            <Caption
              text="This is video caption secondary"
            />
          </div>
        </figcaption>
      </figure>
    </div>
    <div
      id="5"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "primary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1500:1000",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fb7ac990a-d872-11e7-9b16-edd3826708d6.jpg?crop=3959%2C2639%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <div>
      <p>
        When Thatcher joined the campaign trail for the 2001 general election, she was followed closely by the media. After several minor strokes, however, it was announced in 2002 that she would cut back her heavy schedule. 
      </p>
    </div>
    <div>
      <link
        href="//components.timesdev.tools/lib2/times-datawrapper-1.1.0/times-datawrapper.html"
        rel="import"
      />
      <times-datawrapper
        chart-id="csmgb"
      />
    </div>
    <div>
      <p>
        Thatcher plainly admired the style and determination of Tony Blair, who crushed John Major’s Conservatives in the 1997 election, and he for his part seemed content from time to time to be compared with her as a strong leader. She regularly revisited some of the issues that had dominated her years in office; for example she gave strong support to the development of democracy and the protection of the rule of law in Hong Kong as promised in the treaty she had signed with China. In 1999, in her first conference speech since her resignation as leader, she defended General Augusto Pinochet, the former dictator of Chile, who was held in Britain after his arrest in 1998. 
      </p>
    </div>
    <div
      id="9"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "secondary",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "3:2",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <div>
      <p>
        By this time she was set to have a permanent place in the House of Commons, after the a rule change meant that an 8ft marble statue, for which she posed with her familiar handbag, could be placed there during her lifetime. When on display at Guildhall, however, it was decapitated by a man with a cricket bat, and so was withdrawn from public view. It was to be placed outside the House of Commons chamber, opposite Winston Churchill. 
      </p>
    </div>
    <Ad
      contextUrl="https://www.thetimes.co.uk/edition/news/france-defies-may-over-russia-37b27qd2s"
      section="news"
      slotName="inline-ad"
    />
    <div>
      <p>
        She was driven by those beliefs to tackle the task of halting and reversing her country’s decline and to ensure that it played its full part in defending the freedoms of the democratic West. Her record and her personality will be the subject of continuing controversy. But no one will ever doubt her sincerity and her courage, and most will concede that the far-reaching changes she made would have been impossible without her. 
      </p>
    </div>
    <div
      id="13"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "1:1.50",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <div>
      <p>
        Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister.
      </p>
    </div>
    <div
      id="15"
    >
      <div>
        <ArticleImage
          captionOptions={
            Object {
              "caption": "All the latest stories in culture and books.",
              "credits": "The credits",
            }
          }
          imageOptions={
            Object {
              "display": "inline",
              "highResSize": null,
              "lowResSize": 100,
              "ratio": "3:2",
              "uri": "https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0",
            }
          }
        />
      </div>
    </div>
    <div>
      <p>
        She led the Conservative Party for 15 years, won three general elections in succession, and never lost a significant vote in the House of Commons. Since Walpole in effect invented the role, only six men have served for longer than her as prime minister: Walpole himself, Pitt, Lord Liverpool, Lord Salisbury, Gladstone and Lord North. She fully earned her place in this company. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister.Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister. Margaret Thatcher was one of the greatest British politicians of the 20th century. The first woman prime minister in Europe, she held the job for 11 years. In the 20th century no other prime minister had been in office for such a long unbroken period, and no one since Lord Liverpool (1812-27) had had such a long continuous run as Prime Minister
      </p>
    </div>
    <div>
      <div>
        <PullQuote
          caption="JudgeSapnara"
          content="[The judgement was] taken because of the evidence available in the court today, that the grandmother is an appropriate carer for the child"
          twitter="@JudgeSapnara"
        />
      </div>
    </div>
    <div>
      <p>
        Thatcher set out, first as party leader and then as prime minister, to overturn the consensus that had shaped postwar British politics and to replace it with a more competitive ethos of free enterprise. She wanted to rescue Britain from the debilitated state to which she believed it had been reduced by socialism and, in the words of her last bravura speech as Prime Minister to the House of Commons, to give back “control to people over their own lives and over their livelihood”. 
      </p>
    </div>
    <div>
      <p>
        It was time to depart, and she announced this to a meeting of the Cabinet on November 22. With typical courage she then went to the House of Commons to speak in a confidence debate. It was a rousing performance, a reminder of her gallantry, flair and conviction. She had not tired of her mission, but those whom she had led had tired of her. 
      </p>
    </div>
    <div>
      <p>
        Thatcher resigned as Prime Minister on November 28, leaving Downing Street, a little tearfully, though with the partial satisfaction of knowing that she was not to be succeeded by Heseltine but by her own favourite, Major, who had defeated Heseltine and Hurd in the parliamentary ballot to follow her. 
      </p>
    </div>
    <div>
      <p>
        Life out of office was initially miserable. Like her predecessor, Heath, she seemed disorientated by the loss of power. But with typical gumption she threw herself into establishing a foundation (named after her) to support business training projects in Eastern Europe and the former Soviet Union and the establishment of a chair of Enterprise Studies at 
        <Link
          target="_blank"
          url="https://www.cam.ac.uk/"
        >
          Cambridge University
        </Link>
        . She toured the world, speaking for large fees in the foundation’s name and to its great financial benefit. She remained immensely popular in several countries, particularly the US, Japan and Eastern Europe. She was the symbol of the defeat of communism and the triumph in the 1980s of market economics. 
      </p>
    </div>
    <div>
      <p>
        She returned sporadically, and not always helpfully, to the political fray. Her support for Major waned as he set out on a more pragmatic European policy than her own. She allowed her own more nationalist opinions to seep out into the public domain, and became ever more forceful, outspoken and extreme in her denunciations of the moves towards political and monetary union in Europe. 
      </p>
    </div>
  </div>,
  <aside
    id="related-articles"
  />,
]
`;
